Fix flex alignment causing odd heights. #66

--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -49,7 +49,9 @@ select {
 #content {
   padding: (2 * $global-padding) $global-padding;
   @include xy-grid-container;
-  
+  align-items: flex-start;
+  align-content: flex-start;
+
   @include breakpoint(small down) {
     padding: 0;
     margin: $global-margin;
